fix alignment on landing page with grid

--- a/src/Styles/Base/_base.scss
+++ b/src/Styles/Base/_base.scss
@@ -31,11 +31,12 @@ button {
 .app {
   display: grid;
   grid-template-rows: [nav-start] 10rem [nav-end main-start] 1fr [main-end footer-start] 10rem [footer-end];
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: 1fr minmax(400px, 1200px) 1fr;
   grid-gap: $space-24;
   height: 100vh;
 }
 
 .main-container {
   grid-area: main-start / 1/ main-end /-1;
+  @include grid-colums-3;
 }
