--- a/src/Styles/Base/_mixins.scss
+++ b/src/Styles/Base/_mixins.scss
@@ -4,3 +4,13 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+@mixin grid-colums-3 {
+  display: grid;
+  grid-template-columns: 1fr minmax(400px, 1200px) 1fr;
+  grid-gap: $space-24;
+}
+
+@mixin centered-in-grid-3 {
+  grid-column: 2/3;
+}
