--- a/src/Styles/Components/card-list.scss
+++ b/src/Styles/Components/card-list.scss
@@ -1,6 +1,6 @@
 .card-list {
   display: grid;
-  grid-gap: $space-12;
+  grid-gap: $space-24;
   grid-template-columns: repeat(auto-fit, 32rem);
   grid-row: 2 / 3;
   grid-column: 1 / -1;
