--- a/src/Styles/Pages/_landing.scss
+++ b/src/Styles/Pages/_landing.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
 
-  @include centered-container;
+  @include centered-in-grid-3;
   justify-content: center;
 
   &__container {
